完成admin#managers群組設定功能 admin#managers功能開發完畢

--- a/config/privileges.yml
+++ b/config/privileges.yml
@@ -24,6 +24,9 @@ managers:
         新增: [add]
         修改: [edit, m_edit, active, inactive]
         刪除: [delete, m_delete]
+        檢視: [view]
+        檢視權限: [view_privileges]
+        設定群組: [group]
         賦予權限: [privileges]
 #        超級權限: [super_user, normal_user, m_priv]
 # 不需要將超級權限列為選項，因為只要是超級使用者就能使用
