完成群組及用戶權限設定，包含群組權限繼承和用戶自訂部分，連同auth.component的權限計算也已測試 但群組權限檢視尚未完成

--- a/config/privileges.yml
+++ b/config/privileges.yml
@@ -56,6 +56,7 @@ news:
     app: news
     methods:
         主程式: [index]
+        檢視: [archives]
         新增: [add]
         修改: [edit, m_edit, active, inactive]
         刪除: [delete, m_delete]
